--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <span class="form__error">Недопустимый формат номера</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="url" pattern="((http:\/\/)|(https:\/\/))(www\.)?([\d\-\w\.]{1,})(:(0|([1-9][0-9]{0,4})))?((\/\w+){0,}\/?#?)?" placeholder="Ваш сайт" required>
+                        <input class="form__input" type="text" name="url" pattern="((http:\/\/)|(https:\/\/))(www\.)?([\d\-\w]{1,}\.([\d\-\.\w]{1,})?)(:(0|([1-9][0-9]{0,4})))?((\/\w+){0,}\/?#?)?" placeholder="Ваш сайт" required>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="text">Отправить</button>
